--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,12 @@ services:
 
   # Backend service (Express API)
   server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
+    image: moshaheer/civic-pulse-server:latest
     container_name: civic-pulse-server
     ports:
       - "5000:5000"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - PORT=5000
       - DB_HOST=mongodb
       - DB_PORT=27017
@@ -40,14 +38,12 @@ services:
       - MONGODB_URI=mongodb://admin:changeme@mongodb:27017/civic-pulse?authSource=admin
       - JWT_SECRET=your-super-secret-jwt-key-change-in-production
       - BCRYPT_SALT_ROUNDS=12
-      - CLIENT_URL=http://localhost:3000
+      - CLIENT_URL=*
       - LOG_LEVEL=info
-      - CORS_ORIGIN=http://localhost:3000
+      - CORS_ORIGIN=*
     depends_on:
       mongodb:
         condition: service_healthy
-    volumes:
-      - ./server/src:/app/src
     restart: unless-stopped
     networks:
       - app-network
@@ -59,9 +55,7 @@ services:
 
   # Frontend service (React)
   client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
+    image: moshaheer/civic-pulse-client:latest
     container_name: civic-pulse-client
     ports:
       - "3000:80"
